syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lightbend.lagom.javadsl.grpc.interop";
option java_outer_classname = "HelloWorldProto";

package helloworld;

service GreeterService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
